VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc24Down.err
[8MB/455.1MB][  1%][>                                                 ][2.667MB/s]  [16MB/455.1MB][  3%][=>                                                ][4MB/s]  [24MB/455.1MB][  5%][==>                                               ][4.8MB/s]  [40MB/455.1MB][  8%][====>                                             ][6.667MB/s]  [48MB/455.1MB][ 10%][=====>                                            ][6.857MB/s]  [56MB/455.1MB][ 12%][======>                                           ][7MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][8MB/s]  [88MB/455.1MB][ 19%][=========>                                        ][8.8MB/s]  [96MB/455.1MB][ 21%][==========>                                       ][8.727MB/s]  [112MB/455.1MB][ 24%][============>                                     ][9.333MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][9.231MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][9.714MB/s]  [144MB/455.1MB][ 31%][===============>                                  ][9.6MB/s]  [152MB/455.1MB][ 33%][================>                                 ][9.5MB/s]  [168MB/455.1MB][ 36%][==================>                               ][9.882MB/s]  [176MB/455.1MB][ 38%][===================>                              ][9.778MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][10.11MB/s]  [200MB/455.1MB][ 43%][=====================>                            ][10MB/s]  [208MB/455.1MB][ 45%][======================>                           ][9.905MB/s]  [216MB/455.1MB][ 47%][=======================>                          ][9.818MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][10.09MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][10MB/s]  [256MB/455.1MB][ 56%][============================>                     ][10.24MB/s]  [264MB/455.1MB][ 58%][=============================>                    ][10.15MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][10.37MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][10.29MB/s]  [304MB/455.1MB][ 66%][=================================>                ][10.48MB/s]  [312MB/455.1MB][ 68%][==================================>               ][10.4MB/s]  [328MB/455.1MB][ 72%][====================================>             ][10.58MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][10.75MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][10.91MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][11.06MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][11.2MB/s]  [408MB/455.1MB][ 89%][============================================>     ][11.33MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][11.68MB/s]  [448MB/455.1MB][ 98%][=================================================>][11.79MB/s]  [455.1MB/455.1MB][100%][==================================================][11.98MB/s]  [455.1MB/455.1MB][100%][==================================================][11.98MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_120909/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_120909/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
